[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.18", features = ["derive"]}
anyhow = "1.0.89"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
colored = "2.1.0"
mime = "0.3.17"
jsonxf = "1.1.1"
syntect = "5"