[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
prost = "0.13"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
async-prost-stream = "0.4.0"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } 
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.13"

