[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

[[example]]
name = "dialect"

[[example]]
name = "covid"

[dependencies]
anyhow = "1"
async-trait = "0.1"
sqlparser = "0.51.0"
polars = { version = "0.43", features = ["json", "lazy"]}
reqwest = { version = "0.12", default_features = false, features = ["rustls-tls"]}
tokio = { version = "1", features = ["fs"]}
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"]}